# sdl-ogc-keyboard

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddResource.cmake
example/: CMakeLists.txt  main.c
src/: CMakeLists.txt  config.c  config.h  keyboard.c  ogc_keyboard.h
tools/: CMakeLists.txt  ogc-osk-tool.c
